# YouTube-Downloader

./: pyproject.toml
YTdownloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/: destination.txt  main.py
